crates/sotf-plugins/tests/snapshots/render_plan_snapshots__upmixer__upmixer__desktop_1800.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "upmixer",
  "width": 1800.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "md",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "config",
    "main",
    "output"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "GAINS",
    "SPATIAL"
  ],
  "overflow_group_ids": [],
  "config_controls": [
    {
      "param_index": 0,
      "param_name": "Speaker Config",
      "control_type": "selector",
      "unit": "",
      "range": [
        0.0,
        9.0
      ],
      "read_only": false
    },
    {
      "param_index": 43,
      "param_name": "Binaural Preview",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    }
  ],
  "main_groups": [
    {
      "id": "GAINS",
      "title": "GAINS",
      "controls": [
        {
          "param_index": 1,
          "param_name": "Front Direct",
          "control_type": "vertical_slider",
          "unit": "x",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false
        },
        {
          "param_index": 2,
          "param_name": "Front Ambient",
          "control_type": "vertical_slider",
          "unit": "x",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false
        },
        {
          "param_index": 3,
          "param_name": "Rear Ambient",
          "control_type": "vertical_slider",
          "unit": "x",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false
        },
        {
          "param_index": 4,
          "param_name": "Height Gain",
          "control_type": "vertical_slider",
          "unit": "x",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "id": "SPATIAL",
      "title": "SPATIAL",
      "controls": [
        {
          "param_index": 12,
          "param_name": "Stereo Width",
          "control_type": "vertical_slider",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 13,
          "param_name": "Center Spread",
          "control_type": "vertical_slider",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 14,
          "param_name": "Upmix Crossover",
          "control_type": "vertical_slider",
          "unit": "Hz",
          "range": [
            150.0,
            350.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [
    {
      "param_index": 34,
      "param_name": "Safety Cap",
      "control_type": "knob",
      "unit": "dB",
      "range": [
        0.0,
        3.0
      ],
      "read_only": false
    },
    {
      "param_index": 44,
      "param_name": "Auto Gain",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false
    },
    {
      "param_index": 45,
      "param_name": "AG Max",
      "control_type": "knob",
      "unit": "dB",
      "range": [
        0.0,
        24.0
      ],
      "read_only": false
    },
    {
      "param_index": 46,
      "param_name": "AG Smoothing",
      "control_type": "knob",
      "unit": "ms",
      "range": [
        10.0,
        500.0
      ],
      "read_only": false
    }
  ],
  "tabs": [
    {
      "name": "LFE & Bass",
      "controls": [
        {
          "param_index": 5,
          "param_name": "LFE Gain",
          "control_type": "knob",
          "unit": "x",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false
        },
        {
          "param_index": 6,
          "param_name": "LFE Cutoff",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            20.0,
            180.0
          ],
          "read_only": false
        },
        {
          "param_index": 7,
          "param_name": "Subharmonic Synth",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 8,
          "param_name": "Sub Gain",
          "control_type": "knob",
          "unit": "x",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 9,
          "param_name": "Sub Freq",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            20.0,
            80.0
          ],
          "read_only": false
        },
        {
          "param_index": 10,
          "param_name": "Sub Attack",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            1.0,
            100.0
          ],
          "read_only": false
        },
        {
          "param_index": 11,
          "param_name": "Sub Release",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            10.0,
            500.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "name": "Dialogue",
      "controls": [
        {
          "param_index": 28,
          "param_name": "Dialogue Weight",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 29,
          "param_name": "Voice Freq Min",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            200.0,
            800.0
          ],
          "read_only": false
        },
        {
          "param_index": 30,
          "param_name": "Voice Freq Max",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            2000.0,
            5000.0
          ],
          "read_only": false
        },
        {
          "param_index": 31,
          "param_name": "Diag Centroid W",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 32,
          "param_name": "Diag Variance W",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 33,
          "param_name": "Diag Coherence W",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "name": "Ambient",
      "controls": [
        {
          "param_index": 25,
          "param_name": "Surround Bleed",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 26,
          "param_name": "Rear Amb Boost",
          "control_type": "knob",
          "unit": "x",
          "range": [
            1.0,
            3.0
          ],
          "read_only": false
        },
        {
          "param_index": 27,
          "param_name": "Rear Late Refl",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            0.5
          ],
          "read_only": false
        }
      ]
    },
    {
      "name": "Height",
      "controls": [
        {
          "param_index": 22,
          "param_name": "Height HF Cap",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            8000.0,
            20000.0
          ],
          "read_only": false
        },
        {
          "param_index": 23,
          "param_name": "Height Trans Red",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 24,
          "param_name": "Height Direct Leak",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            0.5
          ],
          "read_only": false
        }
      ]
    },
    {
      "name": "Enhancement",
      "controls": [
        {
          "param_index": 15,
          "param_name": "HR Direct",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 16,
          "param_name": "HR Sharpen",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 17,
          "param_name": "Ambient Boost",
          "control_type": "knob",
          "unit": "x",
          "range": [
            0.5,
            2.0
          ],
          "read_only": false
        },
        {
          "param_index": 18,
          "param_name": "Decor Mode",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 19,
          "param_name": "Decor LFO Rate",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            0.01,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 20,
          "param_name": "Velvet Duration",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            10.0,
            100.0
          ],
          "read_only": false
        },
        {
          "param_index": 21,
          "param_name": "Velvet Density",
          "control_type": "knob",
          "unit": "",
          "range": [
            500.0,
            5000.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "name": "Analysis",
      "controls": [
        {
          "param_index": 35,
          "param_name": "Low Latency",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 36,
          "param_name": "Freq Resolution",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            2.0
          ],
          "read_only": false
        },
        {
          "param_index": 41,
          "param_name": "Multi-Source Extraction",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 42,
          "param_name": "Multi-Source Threshold",
          "control_type": "knob",
          "unit": "",
          "range": [
            0.05,
            0.5
          ],
          "read_only": false
        }
      ]
    },
    {
      "name": "Diagnostics",
      "controls": [
        {
          "param_index": 37,
          "param_name": "Bypass Decor",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 38,
          "param_name": "Bypass Transients",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 39,
          "param_name": "Bypass All",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 40,
          "param_name": "ML Detection",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
